--- a/src/web/index.html
+++ b/src/web/index.html
@@ -14,6 +14,7 @@
       </form>
       <p class="info"></p>
     </div>
+    <script type="text/javascript" src="/eel.js"></script>
   <script src="app.js"></script>
   </body>
 </html>
