--- a/src/web/index.html
+++ b/src/web/index.html
@@ -15,6 +15,6 @@
       <p class="info"></p>
     </div>
     <script type="text/javascript" src="/eel.js"></script>
-  <script src="app.js"></script>
+  <script src="test.js"></script>
   </body>
 </html>
