--- a/src/web/index.html
+++ b/src/web/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
+      <form onsubmit="submit()" id="search-form">
         <input name="q" type="text" placeholder="Search Google..." autocomplete="off" autofocus>
         <!-- <button type="button"><i class="fas fa-microphone"></i></button> -->
       </form>
       <p class="info"></p>
     </div>
     <script type="text/javascript" src="/eel.js"></script>
-  <script src="app.js"></script>
+  <script src="test.js"></script>
   </body>
 </html>
