--- a/src/web/index.html
+++ b/src/web/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <form onsubmit="submit()" id="search-form">
-        <input name="q" type="text" placeholder="Search Google..." autocomplete="off" autofocus>
+        <input name="q" type="text"  autocomplete="off" autofocus>
         <!-- <button type="button"><i class="fas fa-microphone"></i></button> -->
       </form>
       <p class="info"></p>
